choe: update ci action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,10 @@ on:
       - integ-publish
       - release/*
       - prerelease/*
+      - kevin-*
   pull_request:
     branches:
-      - "*"
+      - master
 
 jobs:
   test:
