--- a/packages/pods-core/package.json
+++ b/packages/pods-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/pods-core",
-  "version": "0.58.4-alpha.3",
+  "version": "0.58.4",
   "description": "pods-core",
   "license": "GPLv3",
   "repository": {
@@ -58,9 +58,9 @@
     "preset": "ts-jest"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.58.4-alpha.1",
-    "@dendronhq/common-server": "^0.58.4-alpha.1",
-    "@dendronhq/engine-server": "^0.58.4-alpha.3",
+    "@dendronhq/common-all": "^0.58.4",
+    "@dendronhq/common-server": "^0.58.4",
+    "@dendronhq/engine-server": "^0.58.4",
     "@octokit/graphql": "^4.6.4",
     "ajv": "^8.6.0",
     "ajv-formats": "^2.1.0",
