--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -40,6 +40,7 @@
     "start:integ:watch": "cross-env PORT=3005 LOG_DST=../../logs/api-server.log LOG_LEVEL=debug npx nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts'"
   },
   "devDependencies": {
+    "@sentry/node": "^6.12.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.8",
     "@types/fs-extra": "^9.0.1",
