--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/common-all",
-  "version": "0.59.1",
+  "version": "0.59.2-alpha.0",
   "description": "common-all",
   "license": "GPLv3",
   "repository": {
