--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/api-server",
-  "version": "0.58.4-alpha.3",
+  "version": "0.59.2-alpha.5",
   "description": "",
   "license": "GPLv3",
   "repository": {
@@ -58,9 +58,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.58.4-alpha.1",
-    "@dendronhq/common-server": "^0.58.4-alpha.1",
-    "@dendronhq/engine-server": "^0.58.4-alpha.3",
+    "@dendronhq/common-all": "^0.59.2-alpha.5",
+    "@dendronhq/common-server": "^0.59.2-alpha.5",
+    "@dendronhq/engine-server": "^0.59.2-alpha.5",
+    "@sentry/node": "^6.12.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
