--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -51,6 +51,7 @@
     "fuse.js": "^6.4.6",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
+    "http-status-codes": "^2.1.4",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.15",
