--- a/.github/workflows/publish-nightly.yml
+++ b/.github/workflows/publish-nightly.yml
@@ -55,3 +55,13 @@ jobs:
         with:
           name: vsix
           path: ./packages/plugin-core/*.vsix
+
+      - name: Publish to VS Code Marketplace
+        env: 
+          VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
+        run: yarn deploy:vscode
+          
+      - name: Publish to Open VSX Marketplace
+        env: 
+          OVSX_PAT: ${{ secrets.VSCODIUM_PUBLISH_PWD }}
+        run: yarn deploy:ovsx
