--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -773,7 +773,9 @@
     "compile": "tsc -p tsconfig.build.json",
     "test": "node ./out/src/test/runTestInteg.js",
     "format": "echo nop",
-    "vscode:uninstall": "node ./out/src/scripts/uninstallHook.js"
+    "vscode:uninstall": "node ./out/src/scripts/uninstallHook.js",
+    "deploy:vscode": "vsce publish --yarn",
+    "deploy:ovsx": "ovsx publish --yarn"
   },
   "devDependencies": {
     "@dendronhq/common-test-utils": "^0.59.2-alpha.5",
