--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-cli",
-  "version": "0.59.2-alpha.5",
+  "version": "0.59.1",
   "description": "dendron-cli",
   "license": "GPLv3",
   "repository": {
@@ -43,11 +43,11 @@
     "test:unit:debug": "NODE_ENV=test  node --inspect node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.59.2-alpha.5",
-    "@dendronhq/common-all": "^0.59.2-alpha.5",
-    "@dendronhq/common-server": "^0.59.2-alpha.5",
-    "@dendronhq/engine-server": "^0.59.2-alpha.5",
-    "@dendronhq/pods-core": "^0.59.2-alpha.5",
+    "@dendronhq/api-server": "^0.59.1",
+    "@dendronhq/common-all": "^0.59.1",
+    "@dendronhq/common-server": "^0.59.1",
+    "@dendronhq/engine-server": "^0.59.1",
+    "@dendronhq/pods-core": "^0.59.1",
     "@jcoreio/async-throttle": "^1.3.2",
     "@types/prompts": "^2.0.14",
     "fs-extra": "^9.0.1",
@@ -59,7 +59,7 @@
     "yargs": "^15.4.1"
   },
   "peerDependencies": {
-    "@dendronhq/dendron-11ty": "^0.57.0"
+    "@dendronhq/dendron-11ty-legacy": "^0.59.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
