--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.59.2-alpha.5",
+  "version": "0.59.1",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.59.2-alpha.5",
-    "@dendronhq/common-frontend": "^0.59.2-alpha.5",
+    "@dendronhq/common-all": "^0.59.1",
+    "@dendronhq/common-frontend": "^0.59.1",
     "html-react-parser": "^1.2.8",
     "lodash": "^4.17.21",
     "next": "10.2.0",
@@ -29,8 +29,8 @@
     "react": "17.0.1",
     "react-css-theme-switcher": "0.2.3",
     "react-dom": "17.0.1",
-    "sass": "^1.39.0",
-    "react-ga": "^3.3.0"
+    "react-ga": "^3.3.0",
+    "sass": "^1.39.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
