--- a/.github/workflows/create-release-image.yml
+++ b/.github/workflows/create-release-image.yml
@@ -11,7 +11,7 @@ on: workflow_dispatch
 
 jobs:
   build:
-    environment: plugin # TODO: Switch to plugin-development when that environment is ready.
+    environment: plugin-development
     strategy:
       fail-fast: true
 
