--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -11,7 +11,7 @@ on: workflow_dispatch
   
 jobs:
   build:
-    environment: plugin # TODO: Switch to plugin-prod when that environment is ready.
+    environment: plugin-production
     strategy:
       fail-fast: true
 
