spike: tmp run workflow on test branch

--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -4,9 +4,10 @@
 name: Publish Extension - Nightly
 
 # TODO: Switch to on push once testing is done.
-on: workflow_dispatch
-  # push:
-  #   branches:
+# on: workflow_dispatch
+  push:
+    branches:
+      - jy-test-branch
   #     - prerelease/*
   
 jobs:
