--- a/packages/dendron-next-server/package.json
+++ b/packages/dendron-next-server/package.json
@@ -60,12 +60,12 @@
     "jest": "23.6.0",
     "less-plugin-npm-import": "^2.1.0",
     "lodash": "^4.17.20",
-    "next": "^10.2.0",
+    "next": "^11.1.2",
     "postcss": "^8.2.13",
-    "react": "17.0.1",
+    "react": "^17.0.2",
     "react-css-theme-switcher": "^0.2.3",
     "react-d3-tree": "^1.16.1",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.3",
     "sass": "^1.35.1",
