--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -21,24 +21,24 @@
     "@chakra-ui/react": "^1.6.7",
     "@dendronhq/common-all": "^0.59.3-alpha.0",
     "@dendronhq/common-frontend": "^0.59.3-alpha.0",
-    "html-react-parser": "^1.2.8",
+    "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
-    "next": "10.2.0",
-    "next-seo": "^4.26.0",
+    "next": "^11.1.2",
+    "next-seo": "^4.27.0",
     "next-sitemap": "^1.6.168",
-    "react": "17.0.1",
-    "react-css-theme-switcher": "0.2.3",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-css-theme-switcher": "^0.3.0",
+    "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "sass": "^1.39.0"
+    "sass": "^1.41.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
     "@types/fs-extra": "^9.0.12",
-    "@types/react": "17.0.14",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
+    "@types/react": "^17.0.21",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
     "fs-extra": "^10.0.0",
-    "typescript": "4.3.5"
+    "typescript": "^4.4.3"
   }
 }
