--- a/packages/dendron-next-server/package.json
+++ b/packages/dendron-next-server/package.json
@@ -39,6 +39,7 @@
     "@dendronhq/engine-server": "^0.59.3-alpha.0",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@next/bundle-analyzer": "^11.1.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.5",
@@ -63,14 +64,13 @@
     "next": "^11.1.2",
     "postcss": "^8.2.13",
     "react": "^17.0.2",
-    "react-css-theme-switcher": "^0.2.3",
+    "react-css-theme-switcher": "^0.3.0",
     "react-d3-tree": "^1.16.1",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.3",
     "sass": "^1.35.1",
-    "swr": "^0.3.9",
-    "webpack-bundle-analyzer": "^4.4.1"
+    "swr": "^0.3.9"
   },
   "devDependencies": {
     "@types/cytoscape": "^3.14.15",
