--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.59.3-alpha.0",
+  "version": "0.59.3-alpha.1",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -19,8 +19,9 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.59.3-alpha.0",
-    "@dendronhq/common-frontend": "^0.59.3-alpha.0",
+    "@dendronhq/common-all": "^0.59.3-alpha.1",
+    "@dendronhq/common-frontend": "^0.59.3-alpha.1",
+    "antd": "4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
@@ -30,6 +31,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-redux": "7.2.3",
     "sass": "^1.41.1"
   },
   "devDependencies": {
