--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/api-server",
-  "version": "0.59.3-alpha.1",
+  "version": "0.60.0",
   "description": "",
   "license": "GPLv3",
   "repository": {
@@ -58,9 +58,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.59.3-alpha.1",
-    "@dendronhq/common-server": "^0.59.3-alpha.1",
-    "@dendronhq/engine-server": "^0.59.3-alpha.1",
+    "@dendronhq/common-all": "^0.60.0",
+    "@dendronhq/common-server": "^0.60.0",
+    "@dendronhq/engine-server": "^0.60.0",
     "@sentry/node": "^6.12.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
