--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-cli",
-  "version": "0.60.0",
+  "version": "0.60.1-alpha.0",
   "description": "dendron-cli",
   "license": "GPLv3",
   "repository": {
@@ -43,11 +43,11 @@
     "test:unit:debug": "NODE_ENV=test  node --inspect node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.60.0",
-    "@dendronhq/common-all": "^0.60.0",
-    "@dendronhq/common-server": "^0.60.0",
-    "@dendronhq/engine-server": "^0.60.0",
-    "@dendronhq/pods-core": "^0.60.0",
+    "@dendronhq/api-server": "^0.60.1-alpha.0",
+    "@dendronhq/common-all": "^0.60.1-alpha.0",
+    "@dendronhq/common-server": "^0.60.1-alpha.0",
+    "@dendronhq/engine-server": "^0.60.1-alpha.0",
+    "@dendronhq/pods-core": "^0.60.1-alpha.0",
     "@jcoreio/async-throttle": "^1.3.2",
     "@types/prompts": "^2.0.14",
     "fs-extra": "^9.0.1",
