--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/api-server",
-  "version": "0.59.3-alpha.1",
+  "version": "0.60.1-alpha.1",
   "description": "",
   "license": "GPLv3",
   "repository": {
@@ -40,7 +40,6 @@
     "start:integ:watch": "cross-env PORT=3005 LOG_DST=../../logs/api-server.log LOG_LEVEL=debug npx nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts'"
   },
   "devDependencies": {
-    "@sentry/node": "^6.12.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.8",
     "@types/fs-extra": "^9.0.1",
@@ -58,10 +57,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.59.3-alpha.1",
-    "@dendronhq/common-server": "^0.59.3-alpha.1",
-    "@dendronhq/engine-server": "^0.59.3-alpha.1",
-    "@sentry/node": "^6.12.0",
+    "@dendronhq/common-all": "^0.60.1-alpha.1",
+    "@dendronhq/common-server": "^0.60.1-alpha.1",
+    "@dendronhq/engine-server": "^0.60.1-alpha.1",
+    "@sentry/integrations": "^6.13.1",
+    "@sentry/node": "^6.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
