--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -31,6 +31,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-ga4": "^1.0.6",
     "react-redux": "7.2.3",
     "sass": "^1.41.1"
   },
