--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -5,9 +5,10 @@ name: Publish Extension - Nightly
 
 # TODO: Switch to on push once testing is done.
 # on: workflow_dispatch
+on:
   push:
     branches:
-      - jy-test-branch
+      - chore/ga-build-automation
   #     - prerelease/*
   
 jobs:
