--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -21,7 +21,7 @@
     "@chakra-ui/react": "^1.6.7",
     "@dendronhq/common-all": "0.60.1-alpha.2",
     "@dendronhq/common-frontend": "^0.60.1-alpha.2",
-    "antd": "4.15.5",
+    "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
