--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -76,14 +76,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.DENDRON_BOT_S3_ACCESS_KEY }}
           aws-region: us-east-1
 
-      # - name: Publish VSIX to S3
-      #   run: |
-      #     version=`cat ./packages/plugin-core/package.json | jq ".version" -r`
-      #     package="nightly-$version.vsix"
-      #     echo $package
-      #     BUCKET=org-dendron-public-assets
-      #     aws s3 cp --acl public-read ./packages/plugin-core/$package s3://$BUCKET/publish/$package
-      #     echo https://$BUCKET.s3.amazonaws.com/publish/$package
+      - name: Publish VSIX to S3
+        run: |
+          version=`cat ./packages/plugin-core/package.json | jq ".version" -r`
+          package="nightly-$version.vsix"
+          echo $package
+          BUCKET=org-dendron-public-assets
+          aws s3 cp --acl public-read ./packages/plugin-core/$package s3://$BUCKET/publish/$package
+          echo https://$BUCKET.s3.amazonaws.com/publish/$package
 
       - name: Create Package
         run: |
@@ -91,10 +91,10 @@ jobs:
           LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget nightly
           LOG_LEVEL=info $DENDRON_CLI dev package_plugin
 
-      # - name: Publish to VS Code Marketplace
-      #   env: 
-      #     VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
-      #   run: yarn deploy:vscode
+      - name: Publish to VS Code Marketplace
+        env: 
+          VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
+        run: yarn deploy:vscode
 
       ## TODO: Check if additional setup is necessary on secrets.GITHUB_TOKEN; Check PR Title formatting
       - name: Raise Pull Request back to master
