--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -94,6 +94,7 @@ jobs:
       - name: Publish to VS Code Marketplace
         env: 
           VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
+        working-directory: ./packages/plugin-core
         run: yarn deploy:vscode
 
       ## TODO: Check if additional setup is necessary on secrets.GITHUB_TOKEN; Check PR Title formatting
