--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -1,6 +1,6 @@
 # This workflow will build the prerelease plugin and publish it to the VS Code
-# Marketplace. This will NOT publish any packages to NPM. The plugin is also
-# uploaded to AWS S3
+# Marketplace under the 'nightly' extension target. This will NOT publish any
+# packages to NPM.
 name: Publish Extension - Nightly
 
 # TODO: Switch to on push once testing is done.
@@ -9,8 +9,8 @@ on:
   push:
     branches:
       - chore/ga-build-automation
-  #     - prerelease/*
-  
+  #     - master with chron schedule.
+
 jobs:
   build:
     environment: plugin-production
@@ -69,29 +69,12 @@ jobs:
           name: vsix
           path: ./packages/plugin-core/*.vsix
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.DENDRON_BOT_S3_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.DENDRON_BOT_S3_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      # - name: Publish VSIX to S3
-      #   run: |
-      #     version=`cat ./packages/plugin-core/package.json | jq ".version" -r`
-      #     package="nightly-$version.vsix"
-      #     echo $package
-      #     BUCKET=org-dendron-public-assets
-      #     aws s3 cp --acl public-read ./packages/plugin-core/$package s3://$BUCKET/publish/$package
-      #     echo https://$BUCKET.s3.amazonaws.com/publish/$package
-
-      - name: Create Package
+      - name: Prepare Package Manifest
         env: 
           NODE_OPTIONS: --max_old_space_size=4096
         run: |
           DENDRON_CLI=./packages/dendron-cli/lib/bin/dendron-cli.js
           LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget nightly
-          LOG_LEVEL=info $DENDRON_CLI dev package_plugin
 
       - name: Publish to VS Code Marketplace
         env: 
@@ -100,11 +83,3 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         working-directory: ./packages/plugin-core
         run: yarn deploy:vscode
-
-      ## TODO: Check if additional setup is necessary on secrets.GITHUB_TOKEN; Check PR Title formatting
-      - name: Raise Pull Request back to master
-        uses: repo-sync/pull-request@v2
-        with:
-          destination_branch: "master"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pr_title: "chore: Pulling prerelease/${{ env.DENDRON_RELEASE_VERSION }} into master"
