--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -69,7 +69,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0"
+    "tslint-config-prettier": "^1.15.0",
+    "vsce": "^1.100.0"
   },
   "engines": {
     "node": ">=10.0.0"
