chore:ga build automation (#1290)
* chore: fix compiler issues

* chore: update testing utilities

* chore: convert spec to bdd style

* spke: support "attach" option

* enhance(cli): add attach option to dendron-cli

This makes it possible to attach to an existing engine instead of spwaning a new one.
Also fixes an issue where file watcher is not cleaned up when spawned from the CLI

Docs: https://github.com/dendronhq/dendron-site/pull/193/files

* chore: fix bad log statement

* fix: closing server 2x

* chore: run ci on all pr

* enhance(cli): add attach option to dendron-cli

This makes it possible to attach to an existing engine instead of spwaning a new one.
Also fixes an issue where file watcher is not cleaned up when spawned from the CLI

Docs: https://github.com/dendronhq/dendron-site/pull/193/files

* enhance(publish): support unpublished links

Unpublished links will display the "This page has not sprouted popup" instead of a 404

* enhance: update behavior on private link

- remove popover in favor of linking to documentation

* choe: update ci action

* chore: increase timeout

* chore: update ci.yml

* fix: issue with EngineConnector not connecting

Sometimes the wsMeta file and port can be created at the same time
(currently observed on ubuntu in testing environment)

* chore: add sentry dep

* chore: remove log lines

* fix: remove check for timestamp when connecting to engine

Since we check for the conneciton on a loop and try to get a response, this is unnecessary

* enhance(cli): add attach option to dendron-cli

This makes it possible to attach to an existing engine instead of spwaning a new one.
Also fixes an issue where file watcher is not cleaned up when spawned from the CLI

Docs: https://github.com/dendronhq/dendron-site/pull/193/files

* chore: bump 11ty

* chore: publish patch

* chore: fix merge error

* chore: add sentry webpack plugin

* chore: bump 11ty

* chore: 

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -773,7 +773,9 @@
     "compile": "tsc -p tsconfig.build.json",
     "test": "node ./out/src/test/runTestInteg.js",
     "format": "echo nop",
-    "vscode:uninstall": "node ./out/src/scripts/uninstallHook.js"
+    "vscode:uninstall": "node ./out/src/scripts/uninstallHook.js",
+    "deploy:vscode": "vsce publish --yarn",
+    "deploy:ovsx": "ovsx publish --yarn"
   },
   "devDependencies": {
     "@dendronhq/common-test-utils": "^0.60.1-alpha.3",
@@ -795,6 +797,7 @@
     "mocha": "^7.1.2",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
+    "vsce": "^1.100.0",
     "vscode-test": "^1.3.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.2",
