chore: test cases added

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -534,6 +534,11 @@
           "when": "resourceExtname == .md && dendron:pluginActive",
           "command": "dendron.renameNote",
           "group": "2_workspace"
+        },
+        {
+          "when": "resourceExtname == .md && dendron:pluginActive",
+          "command": "dendron.moveNote",
+          "group": "2_workspace"
         }
       ] ,
       "editor/context": [
