chore: update delete note for schema files

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -526,7 +526,7 @@
           "group": "2_workspace"
         },
         {
-          "when": "resourceExtname == .md && dendron:pluginActive",
+          "when": "resourceExtname == .md || resourceExtname == .yml && dendron:pluginActive",
           "command": "dendron.deleteNode",
           "group": "2_workspace"
         },
