--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-cli",
-  "version": "0.60.1-alpha.3",
+  "version": "0.60.1",
   "description": "dendron-cli",
   "license": "GPLv3",
   "repository": {
@@ -40,11 +40,11 @@
     "watch": "yarn compile --watch"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.60.1-alpha.3",
-    "@dendronhq/common-all": "^0.60.1-alpha.3",
-    "@dendronhq/common-server": "^0.60.1-alpha.3",
-    "@dendronhq/engine-server": "^0.60.1-alpha.3",
-    "@dendronhq/pods-core": "^0.60.1-alpha.3",
+    "@dendronhq/api-server": "^0.60.1",
+    "@dendronhq/common-all": "^0.60.1",
+    "@dendronhq/common-server": "^0.60.1",
+    "@dendronhq/engine-server": "^0.60.1",
+    "@dendronhq/pods-core": "^0.60.1",
     "@jcoreio/async-throttle": "^1.3.2",
     "@types/prompts": "^2.0.14",
     "fs-extra": "^9.0.1",
