--- a/.github/workflows/create-prerelease-image.yml
+++ b/.github/workflows/create-prerelease-image.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Configure Git user
         run: |
-          git config --global user.name CI
-          git config --global user.email ci@dendron.so
+          git config --global user.name github.actions
+          git config --global user.email github-actions@github.com
 
       - name: Checkout source
         uses: actions/checkout@v2
