--- a/.github/workflows/publish-extension-dendron.yml
+++ b/.github/workflows/publish-extension-dendron.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Configure Git user
         run: |
-          git config --global user.name CI
-          git config --global user.email ci@dendron.so
+          git config --global user.name github.actions
+          git config --global user.email github-actions@github.com
 
       - name: Checkout source
         uses: actions/checkout@v2
@@ -63,7 +63,7 @@ jobs:
           LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget dendron
 
       - name: Push Branch Commits to Github
-        run: push -u origin HEAD
+        run: git push -u origin HEAD
 
       - name: Publish to VS Code Marketplace
         env:
