spike: CR Feedback

--- a/.github/workflows/create-release-image.yml
+++ b/.github/workflows/create-release-image.yml
@@ -54,7 +54,7 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: |
           echo "DENDRON_RELEASE_VERSION=`cat meta.json | jq -r '.["@dendronhq/plugin-core"]' | awk -F. -v OFS=. 'NF>1{$(NF-1)=sprintf("%0*d", length($(NF-1)), ($(NF-1)+1)); $NF=0; print}'`" >> $GITHUB_ENV
-          yarn build:patch:minor:ci
+          yarn build:minor:local:ci
 
       - name: Upload VSIX Artifact
         uses: actions/upload-artifact@v2
